packages/typ/tests/fixtures/diagnostics/0036_core_wrap_payload_mismatch_03.ml.expected
File "0036_core_wrap_payload_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0036_core_wrap_payload_mismatch_03 is not a valid module name.

File "0036_core_wrap_payload_mismatch_03.ml", line 2, characters 24-28:
2 | let _ : int wrap = Wrap true
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
